Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104985

QByteArray::fromBase64Encoding(toBase64()) round-trip fails for data > 2GiB

    XMLWordPrintable

Details

    • 3
    • d76bf64531 (qt/qtbase/dev) d76bf64531 (qt/tqtc-qtbase/dev) 9d036b0c67 (qt/qtbase/6.4) 9d036b0c67 (qt/tqtc-qtbase/6.4) adb3b51eb4 (qt/tqtc-qtbase/6.2) 1fe0b3a7ec (qt/qtbase/6.3) 1fe0b3a7ec (qt/tqtc-qtbase/6.3)
    • Foundation Sprint 61, Foundation Sprint 62

    Description

      This code fails on 64-bit platforms:

      const QByteArray b1 = ~~~ more than 2GiB of data ~~~;
      const QByteArray b64 = b1.toBase64();
      const QByteArray b2 = QByteArray::fromBase64Encoding(b64);
      assert(b1 == b2);
      

      There's some truncation going on.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mmutz Marc Mutz
              mmutz Marc Mutz
              Vladimir Minenko Vladimir Minenko
              Alex Blasche Alex Blasche
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: